Add first images by Carlos

--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 layout: page
 title: About
 permalink: /about/
-main_image_path: "/assets/images/e-la-nave-va_21390829511_o.jpg"
-main_image_caption: "La Nave Va - an ocean liner passing St Mark's, Venice"
+main_image_path: "/assets/images/rose.jpg"
+main_image_caption: "Rose"
 frontpage: true
 homepage_description_markdown: >-
-  All about the Eye Gallery painter
+  All about BigCyArts and Carlos Caban
 frontpagetitle: About
 images:
   - image_path:
