--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Contact
+title: "Contact"
 permalink: /contact/
 main_image_path:
 main_image_caption:
@@ -32,7 +32,8 @@ _comments:
   frontpagetitle: Alternative title for home page use
 ---
   <div class="editable">
-      <p> <strong>Tel:</strong> 111 1111</p>
+
+  <p><strong>Tel:</strong> 111 1111</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id quaerat, tempore ut accusamus, dicta, soluta est unde officia iure dolorem asperiores voluptate quis molestiae. Dolores, porro commodi est ipsum assumenda?</p>
   </div>
 
