Added logo and all correct pages and news on front page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 main_image_path: "/assets/images/rose.jpg"
 main_image_caption: "Rose"
-frontpage: true
+frontpage: false
 homepage_description_markdown: >-
   All about BigCyArts and Carlos Caban
 frontpagetitle: About
