--- a/posts.html
+++ b/posts.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: "News"
+title: "Writings"
 main_image_path:
 main_image_caption:
-permalink: /news/
+permalink: /writings/
 posts_number: 4
 _options:
   layout:
