Updated 9 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@ _comments:
   caption: optional caption
 ---
 
-
 <section class="blog blog--home">
 
   <div class="flex-sixty">
@@ -68,7 +67,7 @@ _comments:
     <div class="blog--excerpt flex-forty">
 
       <div class="editable">
-        <h2 class="mb0">BigCyArts news</h2>
+        <h2 class="mb0">Bigcyarts news</h2>
       </div>
 
       <ul class="posts--list">
@@ -173,3 +172,4 @@ _comments:
     {% endfor %}
 
 
+</section>
