Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -36,5 +36,6 @@ _comments:
 ---
 
 <div class="editable">
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse maxime incidunt neque vero vel aliquam deleniti, libero, hic necessitatibus. Repellendus, voluptates mollitia sunt odit id blanditiis illo autem voluptatem totam.
-</div>
+    <p>Hidden rose acrylic on canvas</p>
+    <p>ipsum dolor sit amet, consectetur adipisicing elit. Esse maxime incidunt neque vero vel aliquam deleniti, libero, hic necessitatibus. Repellendus, voluptates mollitia sunt odit id blanditiis illo autem voluptatem totam.</p>
+  </div>
