Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -2,29 +2,28 @@
 layout: page
 title: About
 permalink: /about/
-main_image_path: "/assets/images/rose.jpg"
-main_image_caption: "Rose"
+main_image_path: /uploads/img-0149.JPG
+main_image_caption: Rose
 frontpage: false
-homepage_description_markdown: >-
-  All about BigCyArts and Carlos Caban
+homepage_description_markdown: All about BigCyArts and Carlos Caban
 frontpagetitle: About
 images:
   - image_path:
-    image_title: ""
+    image_title:
     image_description:
 _options:
   layout:
     hidden: true
   main_image_path:
-    width: 1200
-    height: 1200
-    resize_style: "contain"
-    mime_type: "image/jpeg"
+    width: '1200'
+    height: '1200'
+    resize_style: contain
+    mime_type: image/jpeg
   image_path:
-    width: 1200
-    height: 1200
-    resize_style: "contain"
-    mime_type: "image/jpeg"
+    width: '1200'
+    height: '1200'
+    resize_style: contain
+    mime_type: image/jpeg
 _comments:
   title: Page title
   permalink: Be careful editing this
