Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: home
-main_image_path: "/assets/images/fire.jpg"
+main_image_path: /uploads/img-0781.JPG
 main_image_caption:
 show_carousel: false
 show_blog: true
 posts_number: 1
 carousel:
   - image: /assets/images/advert-customers.jpg
-    caption: "A test caption"
+    caption: A test caption
     alink: /gallery/test/
   - image: /assets/images/advert-impregnable.jpg
     caption:
@@ -20,13 +20,13 @@ _options:
   show_blog:
     hidden: true
   main_image_path:
-    width: 1200
-    height: 1200
+    width: '1200'
+    height: '1200'
     resize_style: contain
     mime_type: image/jpeg
   image:
-    width: 1200
-    height: 1200
+    width: '1200'
+    height: '1200'
     resize_style: contain
     mime_type: image/jpeg
 _comments:
