Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 main_image_path: /uploads/img-0781.JPG
-main_image_caption:
+main_image_caption: Angry Bird
 show_carousel: false
 show_blog: true
 posts_number: 1
