Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 main_image_path: /uploads/img-0781.JPG
 main_image_caption: Angry Bird
-show_carousel: false
+show_carousel: true
 show_blog: true
 posts_number: 1
 carousel:
@@ -10,6 +10,9 @@ carousel:
     caption: A test caption
     alink: /gallery/test/
   - image: /assets/images/advert-impregnable.jpg
+    caption:
+    alink:
+  - image:
     caption:
     alink:
 _options:
