Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 main_image_path: /uploads/img-0781.JPG
 main_image_caption: Angry Bird
-show_carousel: true
+show_carousel: false
 show_blog: true
 posts_number: 1
 carousel:
@@ -59,8 +59,7 @@ _comments:
 
 
     <div class="editable">
-      <p>This is the demo editable first paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, in magnam placeat. Ex illo ipsa libero voluptatem necessitatibus modi fugit odit omnis. Sequi voluptatem mollitia voluptatum ipsum placeat, quaerat laudantium!</p>
-
+      <p>This is the demo editable first paragraph.&nbsp;</p>
     </div>
 
   </div>
