Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ _comments:
 
 
     <div class="editable">
-      <p>This is the demo editable first paragraph.&nbsp;</p>
+      <p>Whats good I'm Carlos Caban Bigcyarts .</p>
     </div>
 
   </div>
