--- a/typography.html
+++ b/typography.html
@@ -7,13 +7,22 @@ main_image_caption: "Clevedon Pools - image by Eye Division"
 _options:
   layout:
     hidden: true
-  permalik:
+  permalink:
     hidden: true
-  main_image_path:
+  image_path:
+    uploads_dir: "assets/images/:year"
     width: 1200
     height: 1200
-    resize_style: "contain"
-    mime_type: "image/jpeg"
+    resize_style: contain
+    mime_type: image/jpeg
+  main_image_path:
+    uploads_dir: "assets/images/:year"
+    width: 1200
+    height: 1200
+    resize_style: contain
+    mime_type: image/jpeg
+  content:
+    uploads_dir: "assets/:year"
 _comments:
   title: Page title
   main_image_path: Image used to represent your page
