--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@ _options:
     hidden: true
   show_blog:
     hidden: true
+  image_path:
+    uploads_dir: "assets/images/:year"
+    width: 1200
+    height: 1200
+    resize_style: contain
+    mime_type: image/jpeg
   main_image_path:
-    width: '1200'
-    height: '1200'
+    uploads_dir: "assets/images/:year"
+    width: 1200
+    height: 1200
     resize_style: contain
     mime_type: image/jpeg
-  image:
-    width: '1200'
-    height: '1200'
-    resize_style: contain
-    mime_type: image/jpeg
+  content:
+    uploads_dir: "assets/:year"
 _comments:
   main_image_path: Cover image
   main_image_caption: Alt text for cover image
